# DreamPen

./: .env.example  .gitignore  README.md  dreampen.db  main.py  pyproject.toml  test_api.py  test_basic.py
.template/: CharacterPool_template.md  ForeshadowTracker_template.md  MainCharacterCard_template.md  MainOutlineStage_template.md  MainOutline_template.md  ScenePlan_template.md  StateTrack_template.md  StyleGuide_template.md  WorldviewSetting_template.md
backend/: __init__.py  dreampen.db  main.py
backend/api/: auth.py  conversations.py  projects.py  prompts.py  version_control.py  worldview.py
backend/core/: __init__.py  auth.py  config.py  database.py  dependencies.py
backend/models/: __init__.py  database.py  schemas.py
backend/services/: __init__.py  agent_service.py  agent_service_with_tools.py  file_service.py  git_service.py  tools.py
frontend/: .env  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  conversation.ts  project.ts  prompts.ts  worldview.ts
frontend/src/components/ChatModal/: index.tsx
frontend/src/components/ChatPanel/: index.tsx
frontend/src/pages/: Auth.css  Home.tsx  Login.tsx  ProjectList.tsx  Register.tsx
frontend/src/store/: auth.ts  index.ts
frontend/src/types/: chat.ts  file.ts  project.ts
frontend/src/utils/: axiosConfig.ts
prompts/: character_agent_prompt.md  outline_agent_prompt.md  scene_plan_agent_prompt.md  state_maintenance_agent_prompt.md  story_writer_agent_prompt.md  style_guide_agent_prompt.md  worldview_agent_prompt.md
(+9 files in other folders)
